license: Revert to Apache 2.0
Updates project license to Apache 2.0, with certain exceptions
to BSD-3-Clause.

Signed-off-by: Kevin Townsend <kevin.townsend@linaro.org>

--- a/Kconfig
+++ b/Kconfig
@@ -1,7 +1,7 @@
 # Private config options for TF-M secure provisioning application
 
 # Copyright (c) 2021 Linaro
-# SPDX-License-Identifier: GPL-3.0
+# SPDX-License-Identifier: Apache-2.0
 
 mainmenu "TF-M secure inference sample application"
 
