--- a/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
+++ b/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
@@ -2,7 +2,7 @@
 # Copyright (c) 2018-2020, Arm Limited. All rights reserved.
 # Copyright (c) 2021-2022 Linaro Limited
 #
-# SPDX-License-Identifier: GPL-3.0
+# SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
