--- a/tfm_secure_partitions/tfm_manifest_list.yaml.in
+++ b/tfm_secure_partitions/tfm_manifest_list.yaml.in
@@ -1,7 +1,7 @@
 #-------------------------------------------------------------------------------
 # Copyright (c) 2018-2022, Linaro. All rights reserved.
 #
-# SPDX-License-Identifier: GPL-3.0
+# SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
