--- a/tfm_secure_partitions/tfm_utvm_service/utvm/CMakeLists.txt
+++ b/tfm_secure_partitions/tfm_utvm_service/utvm/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # Copyright (c) 2022 Linaro Limited
 #
-# SPDX-License-Identifier: GPL-3.0
+# SPDX-License-Identifier: Apache-2.0
 #
 cmake_minimum_required(VERSION 3.13.1)
 
